fix bug overflow-y on homepage

--- a/app/assets/stylesheets/home/_course.scss
+++ b/app/assets/stylesheets/home/_course.scss
@@ -44,6 +44,7 @@
     flex-flow: row wrap;
     overflow-y:scroll;
     padding: 0%;
+    margin-left: 0%;
   }
 
   .course_title {
@@ -60,5 +61,6 @@
     font-weight: bold;
     margin-left: 10%;
     display: flex;
+    margin-top: 5%;
   }
 }
