--- a/app/assets/stylesheets/home/_experince.scss
+++ b/app/assets/stylesheets/home/_experince.scss
@@ -7,7 +7,6 @@
   display: flex;
   position: relative;
   flex-flow: row wrap;
-  overflow-y:scroll;
   margin-bottom: 10%;
   margin-top: 5%;
 }
@@ -49,15 +48,13 @@
 @media screen and (max-width: 576px){
   .experince {
     width: 100%;
-    height: 125%;
+    height: 100%;
     border-radius: 15px;
-    border: 2px solid $black;
-    background-image: linear-gradient(to right, $light-blue, $light-green);
+    border: 2px solid #0E0000;
+    background-image: linear-gradient(to right, #4e91f4, #1EDD88);
     display: flex;
     position: relative;
-    flex-flow: row wrap;
-    overflow-y:scroll;
-    margin-bottom: 10%;
+    margin-bottom: 20%;
     margin-top: 5%;
   }
 
@@ -68,7 +65,7 @@
     border-radius: 15px;
     height: 20%;
     width: 70%;
-    margin-top: 3%;
+    margin-top: 5%;
     margin-left: 16%;
     border: 2px solid $black;
     justify-content: center;
@@ -85,7 +82,7 @@
     background-color: $white;
     border-radius: 15px;
     border: 2px solid $black;
-    height: 67%;
+    height: 60%;
     width: 85%;
     margin-left: 7%;
     text-align: center;
